--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
               <div class="d-flex justify-content-center ">
                 <div class="img-container">
-                  <img src="/images/girl.jpg" class="profileImg " alt="">
+                  <img src="./images/girl.jpg" class="profileImg " alt="">
                   <span class="check-icon">
                     <i class="fas fa-check"></i>
                   </span>
